# LeanRAG-Python

./: .gitignore  README.md  dataset_minictx_theorems_only.json  informalize.sh  pyproject.toml  test.json  test.py
LeanRAG/: LeanIO.py  __init__.py  dataset.py  formal.py  informal.py  informalize_utils.py  module.py  parser.py  parserv4.py  tune_retriever.py
LeanRAG/agent_boilerplate/: __init__.py  azure_batch_inference.py
src/: LeanIO.py  RAG_imports.py  RAG_mathlib.py  __init__.py  annotate.py  retrieve.py  utils.py
src/LeanRAG/: LeanIO.py  __init__.py  annotate.py  module.py  utils.py
src/LeanRAG/informal/: get_class2.py  heuristic_filter.py  informalize_inference.py
